add base structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Wires and More</title>
 </head>
 <body>
-    <p>TEST again</p>
+    <header>Coming Soon</header>
+    <nav><ul>
+        <li>Home</li>
+        <li>Domestic</li>
+        <li>Commercial</li>
+        <li>Contact Us</li>
+    </ul></nav>
+    <section></section>
+    <footer></footer>
 </body>
 </html>
