--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wires and More</title>
 </head>
+
 <body>
     <header>Coming Soon</header>
-    <nav><ul>
-        <li>Home</li>
-        <li>Domestic</li>
-        <li>Commercial</li>
-        <li>Contact Us</li>
-    </ul></nav>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Domestic</li>
+            <li>Commercial</li>
+            <li>Contact Us</li>
+            <li>Links</li>
+        </ul>
+    </nav>
     <section></section>
     <footer></footer>
 </body>
+
 </html>
