correct a ref links

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <header>Coming Soon</header>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Domestic</li>
-            <li>Commercial</li>
-            <li>Contact Us</li>
-            <li>Links</li>
+            <li><a href="Home">Home</a></li>
+            <li><a href="domestic">Domestic</a></li>
+            <li><a href="commercial">Commercial</a></li>
+            <li><a href="contact">Contact Us</a></li>
         </ul>
     </nav>
     <section></section>
