added sections to html

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <header>Coming Soon</header>
     <nav>
         <ul>
-            <li><a href="Home">Home</a></li>
+            <li><a href="home">Home</a></li>
             <li><a href="domestic">Domestic</a></li>
             <li><a href="commercial">Commercial</a></li>
             <li><a href="contact">Contact Us</a></li>
         </ul>
     </nav>
-    <section></section>
+    <section id="home"></section>
+    <section id="domestic"></section>
+    <section id="commercial"></section>
+    <section id="contact"></section>
+
     <footer></footer>
 </body>
 
