added section h2 headings

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <li><a href="contact">Contact Us</a></li>
         </ul>
     </nav>
-    <section id="home"></section>
-    <section id="domestic"></section>
-    <section id="commercial"></section>
-    <section id="contact"></section>
+    <section id="home"><h2>Wires and More</h2></section>
+    <section id="domestic"><h2>Domestic</h2></section>
+    <section id="commercial"><h2>Commercial</h2></section>
+    <section id="contact"><h2>Contact Us</h2></section>
 
     <footer></footer>
 </body>
