corrected id links

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <header>Coming Soon</header>
     <nav>
         <ul>
-            <li><a href="home">Home</a></li>
-            <li><a href="domestic">Domestic</a></li>
-            <li><a href="commercial">Commercial</a></li>
-            <li><a href="contact">Contact Us</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#domestic">Domestic</a></li>
+            <li><a href="#commercial">Commercial</a></li>
+            <li><a href="#contact">Contact Us</a></li>
         </ul>
     </nav>
-    <section id="#home"><h2>Wires and More</h2></section>
-    <section id="#domestic"><h2>Domestic</h2></section>
-    <section id="#commercial"><h2>Commercial</h2></section>
-    <section id="#contact"><h2>Contact Us</h2></section>
+    <section id="home"><h2>Wires and More</h2></section>
+    <section id="domestic"><h2>Domestic</h2></section>
+    <section id="commercial"><h2>Commercial</h2></section>
+    <section id="contact"><h2>Contact Us</h2></section>
 
     <footer></footer>
 </body>
