add minimal html strucure

--- a/index.html
+++ b/index.html
@@ -5,24 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wires and More</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>Coming Soon</header>
+    <header></header>
     <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#domestic">Domestic</a></li>
-            <li><a href="#commercial">Commercial</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-        </ul>
-    </nav>
-    <section id="home"><h2>Wires and More</h2></section>
-    <section id="domestic"><h2>Domestic</h2></section>
-    <section id="commercial"><h2>Commercial</h2></section>
-    <section id="contact"><h2>Contact Us</h2></section>
+        <div>
+            <ul>
+                <li><a href="#domestic"></a>Domestic</li>
+            </ul>
+            <ul>
+                <li><a href="#commercial"></a>Commercial</li>
+            </ul>
+            <ul>
+                <li><a href="#aboutus"></a>About Us</li>
+            </ul>
+            <ul>
+                <li><a href="#contactus"></a>Contact Us</li>
+            </ul>
+        </div>
 
-    <footer></footer>
+    </nav>
+    <main>
+        <section id="left-section">
+            <article><img id="logo" src="images/logo.jpg" alt="Wires and More Logo"></article>
+        </section>
+        <section is="right-section">
+            <article></article>
+        </section>
+    </main>
+    <footer>
+        <h4>Wires and More &copy; 2023</h4>
+    </footer>
 </body>
 
 </html>
