added right hand section, increased font sizes

--- a/index.html
+++ b/index.html
@@ -9,34 +9,36 @@
 </head>
 
 <body>
-    <header></header>
-    <nav>
-        <div>
-            <ul>
-                <li><a href="#domestic"></a>Domestic</li>
-            </ul>
-            <ul>
-                <li><a href="#commercial"></a>Commercial</li>
-            </ul>
-            <ul>
-                <li><a href="#aboutus"></a>About Us</li>
-            </ul>
-            <ul>
-                <li><a href="#contactus"></a>Contact Us</li>
-            </ul>
-        </div>
+    <header>
+        <nav>
+            <div>
+                <ul>
+                    <li><a href="#domestic"></a>Domestic</li>
+                </ul>
+                <ul>
+                    <li><a href="#commercial"></a>Commercial</li>
+                </ul>
+                <ul>
+                    <li><a href="#aboutus"></a>About Us</li>
+                </ul>
+                <ul>
+                    <li><a href="#contactus"></a>Contact Us</li>
+                </ul>
+            </div>
+    
+        </nav>
+    </header>
 
-    </nav>
     <main>
-        <section id="left-section">
+        <section id="left_section">
             <article><img id="logo" src="images/logo.jpg" alt="Wires and More Logo"></article>
         </section>
-        <section is="right-section">
-            <article></article>
+        <section id="right_section">
+            <article><img id="logo" src="images/construction.jpg" alt="Wires and More Logo"></article>
         </section>
     </main>
     <footer>
-        <h4>Wires and More &copy; 2023</h4>
+        <h4>Copyright &copy; 2023 Wires and More</h4>
     </footer>
 </body>
 
