--- a/index.html
+++ b/index.html
@@ -3,43 +3,61 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wires and More</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <div>
-                <ul>
-                    <li><a href="#domestic"></a>Domestic</li>
-                </ul>
-                <ul>
-                    <li><a href="#commercial"></a>Commercial</li>
-                </ul>
-                <ul>
-                    <li><a href="#aboutus"></a>About Us</li>
-                </ul>
-                <ul>
-                    <li><a href="#contactus"></a>Contact Us</li>
-                </ul>
-            </div>
-    
+            <ul>
+                <li>
+                    <a href="#domestic">Domestic</a>
+                    <a href="#commercial">Commercial</a>
+                    <a href="#about">About Us</a>
+                    <a href="#contact">Contact Us</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
     <main>
-        <section id="left_section">
-            <article><img id="logo" src="images/logo.jpg" alt="Wires and More Logo"></article>
-        </section>
-        <section id="right_section">
-            <article><img id="logo" src="images/construction.jpg" alt="Wires and More Logo"></article>
-        </section>
-    </main>
-    <footer>
-        <h4>Copyright &copy; 2023 Wires and More</h4>
-    </footer>
-</body>
+        <div class="left-div">
+            <div class="img-container">
+                <img src="images/logo.jpg" alt="">
+            </div>
 
-</html>
+        </div>
+        <div class="right-div">
+            <div class="grid-container">
+                <section class="item1">
+                    <div class="img-container-section">
+                        <img src="images/logo.jpg" alt="">
+                    </div>
+                    <h2>Electrical</h2>
+                </section>
+                <section class="item2">
+                    <div class="img-container-section">
+                        <img src="images/logo.jpg" alt="">
+                    </div>
+                    <h2>Electrical</h2>
+                </section>
+                <section class="item3">
+                    <div class="img-container-section">
+                        <img src="images/logo.jpg" alt="">
+                    </div>
+                    <h2>Electrical</h2>
+                </section>
+                <section class="item4">
+                    <div class="img-container-section">
+                        <img src="images/logo.jpg" alt="">
+                    </div>
+                    <h2>Electrical</h2>
+                </section>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+    </footer>
+</body></html>
