--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
         <div class="right-div">
             <div class="grid-container">
                 <section class="item1">
-                    <div class="img-container-section">
-                        <img src="images/logo.jpg" alt="">
+                    <div class="grid-img-container">
+                        <img src="" alt="">
                     </div>
                     <h2>Electrical</h2>
                 </section>
                 <section class="item2">
-                    <div class="img-container-section">
-                        <img src="images/logo.jpg" alt="">
+                    <div class="grid-img-container">
+                        <img src="" alt="">
                     </div>
                     <h2>Electrical</h2>
                 </section>
                 <section class="item3">
-                    <div class="img-container-section">
-                        <img src="images/logo.jpg" alt="">
+                    <div class="grid-img-container">
+                        <img src="" alt="">
                     </div>
                     <h2>Electrical</h2>
                 </section>
                 <section class="item4">
-                    <div class="img-container-section">
-                        <img src="images/logo.jpg" alt="">
+                    <div class="grid-img-container">
+                        <img src="" alt="">
                     </div>
                     <h2>Electrical</h2>
                 </section>
