corrrect line 29 css error

--- a/index.html
+++ b/index.html
@@ -34,25 +34,24 @@
                     <div class="grid-img-container">
                         <img src="" alt="">
                     </div>
-                    <h2>Electrical</h2>
+                    <h2>Under Construction</h2>
                 </section>
                 <section class="item2">
                     <div class="grid-img-container">
                         <img src="" alt="">
                     </div>
-                    <h2>Electrical</h2>
+                    <h2>Under Construction</h2>
                 </section>
                 <section class="item3">
                     <div class="grid-img-container">
                         <img src="" alt="">
-                    </div>
-                    <h2>Electrical</h2>
+                    </d>Under Construction</h2>
                 </section>
                 <section class="item4">
                     <div class="grid-img-container">
                         <img src="" alt="">
                     </div>
-                    <h2>Electrical</h2>
+                    <h2>Under Construction</h2>
                 </section>
             </div>
         </div>
