fix line 48 html error

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <section class="item3">
                     <div class="grid-img-container">
                         <img src="" alt="">
-                    </d>Under Construction</h2>
+                    </h2>Under Construction</h2>
                 </section>
                 <section class="item4">
                     <div class="grid-img-container">
