fix missing </div> line 48

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <section class="item3">
                     <div class="grid-img-container">
                         <img src="" alt="">
+                    </div>
                     </h2>Under Construction</h2>
                 </section>
                 <section class="item4">
