--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="grid-img-container">
                         <img src="" alt="">
                     </div>
-                    </h2>Under Construction</h2>
+                    <h2>Under Construction</h2>
                 </section>
                 <section class="item4">
                     <div class="grid-img-container">
