move css into directory of html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wires and More</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <main>
         <div class="left-div">
             <div class="img-container">
-                <img src="../images/logo.jpg" alt="">
+                <img src="/images/logo.jpg" alt="">
             </div>
 
         </div>
