--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <div class="left-div">
             <div class="img-container">
-                <img src="/images/logo.jpg" alt="Wires and More's Business Logo">
+                <img src="images/logo.jpg" alt="Wires and More's Business Logo">
             </div>
 
         </div>
