add css to evenly space aref's

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <header>
         <nav>
             <ul>
-                <li>
-                    <a href="#domestic">Domestic</a>
-                    <a href="#commercial">Commercial</a>
-                    <a href="#about">About Us</a>
-                    <a href="#contact">Contact Us</a>
-                </li>
+                <li><a href="#domestic">Domestic</a></li>
+                <li><a href="#commercial">Commercial</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
