Added Copyright to footer

--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
     </main>
 
     <footer>
+        <h5>Copyright 2023 &copy; Wires and More. All Rights Reserved</h5>
     </footer>
-</body></html>
+</body>
+
+</html>
