CHANGED GRID TO SECTIONED DIVS

--- a/index.html
+++ b/index.html
@@ -29,38 +29,54 @@
 
         </div>
         <div class="right-div">
-            <div class="grid-container">
-                <section class="item1">
-                    <div class="grid-img-container">
-                        <img src="" alt="">
+
+            <div class="right-top">
+                <div class="left-top-container">
+                    <div class="a-image-container">
+                        <img src="images/construction.jpg" alt="">
                     </div>
-                    <h2>Under Construction</h2>
-                </section>
-                <section class="item2">
-                    <div class="grid-img-container">
-                        <img src="" alt="">
+                    <div class="label-container">
+                        <h2>ELECTRICAL INSTALLATIONS</h2>
                     </div>
-                    <h2>Under Construction</h2>
-                </section>
-                <section class="item3">
-                    <div class="grid-img-container">
-                        <img src="" alt="">
+                </div>
+                <div class="right-top-container">
+                    <div class="a-image-container">
+                        <img src="images/construction.jpg" alt="">
                     </div>
-                    <h2>Under Construction</h2>
-                </section>
-                <section class="item4">
-                    <div class="grid-img-container">
-                        <img src="" alt="">
+                    <div class="label-container">
+                        <h2>DATA INSTALLATIONS</h2>
                     </div>
-                    <h2>Under Construction</h2>
-                </section>
+                </div>
             </div>
+
+            <div class="right-bottom">
+
+                <div class="left-bottom-container">
+                    <div class="a-image-container">
+                        <img src="images/construction.jpg" alt="">
+                    </div>
+                    <div class="label-container">
+                        <h2>ELECTRICAL INSPECTIONS</h2>
+                    </div>
+                </div>
+
+
+                <div class="right-bottom-container">
+                    <div class="a-image-container">
+                        <img src="images/construction.jpg" alt="">
+                    </div>
+                    <div class="label-container">
+                        <h2>TEST AND TAG</h2>
+                    </div>
+                </div>
+
+
+            </div>
+
         </div>
     </main>
 
     <footer>
         <h5>Copyright 2023 &copy; Wires and More. All Rights Reserved</h5>
     </footer>
-</body>
-
-</html>
+</body></html>
