--- a/index.html
+++ b/index.html
@@ -2,81 +2,106 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Wires and More</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
-    <link rel="stylesheet" href="styles.css">
-
-</head>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Khand&family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.12.0/cdn/themes/light.css">
+    <link rel="stylesheet" href="css/style.css">
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#domestic">Domestic</a></li>
-                <li><a href="#commercial">Commercial</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <div class="left-div">
-            <div class="img-container">
-                <img src="images/logo.jpg" alt="Wires and More's Business Logo">
+    <!--Header Containment -->
+    <header class="site-header-container">
+        <!--Header-->
+        <div class="site-header-content">
+            <!--Header Content Area-->
+            <div class="site-header">
+                <!--Logo Containment Area-->
+                <div class="logo-container">
+                    <!--Header Image Link-->
+                    <a href="#home">
+                        <!--Header Image-->
+                        <img src="images/logo_small.jpg" alt="">
+                    </a>
+                </div>
+                <div class="nav-container">
+                    <ul>
+                        <li><a href="#domestic">Residential</a></li>
+                        <li><a href="#commercial">Commercial</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
+                    </ul>
+                </div>
             </div>
-
         </div>
-        <div class="right-div">
-
-            <div class="right-top">
-                <div class="left-top-container">
-                    <div class="a-image-container">
-                        <img src="images/construction.jpg" alt="">
+    </header>
+    <main>
+        <div class="section-container" id="home">
+            <div class="image-container">
+                <img src="images/kitchen.jpg" alt="">
+            </div>
+            <div class="spacer">
+                <h3 class="welcome-message">OUR SERVICES</h3>
+            </div>
+            <div class="section-messages-container">
+                <div class="section-message">
+                    <div class="message-1">
+                        <div class="message-divider">
+                            <sl-icon name="lightning"></sl-icon>
+                        </div>
+                        <div class="message-divider">
+                            Electrical
+                        </div>
                     </div>
-                    <div class="label-container">
-                        <h2>ELECTRICAL INSTALLATIONS</h2>
+                    <div class="message-2">
+                        <div class="message-divider">
+                            <sl-icon name="bar-chart"></sl-icon>
+                        </div>
+                        <div class="message-divider">
+                            Data
+                        </div>
                     </div>
-                </div>
-                <div class="right-top-container">
-                    <div class="a-image-container">
-                        <img src="images/construction.jpg" alt="">
+                    <div class="message-3">
+                        <div class="message-divider">
+                            <sl-icon name="tools"></sl-icon>
+                        </div>
+                        <div class="message-divider">
+                            Service Calls
+                        </div>
+                        <div class="message-divider"></div>
                     </div>
-                    <div class="label-container">
-                        <h2>DATA INSTALLATIONS</h2>
+                    <div class="message-4">
+                        <div class="message-divider">
+                            <sl-icon name="currency-dollar"></sl-icon>
+                        </div>
+                        <div class="message-divider">
+                            Free Quotes
+                        </div>
+                        <div class="message-divider"></div>
                     </div>
                 </div>
             </div>
-
-            <div class="right-bottom">
-
-                <div class="left-bottom-container">
-                    <div class="a-image-container">
-                        <img src="images/construction.jpg" alt="">
-                    </div>
-                    <div class="label-container">
-                        <h2>ELECTRICAL INSPECTIONS</h2>
-                    </div>
-                </div>
-
-
-                <div class="right-bottom-container">
-                    <div class="a-image-container">
-                        <img src="images/construction.jpg" alt="">
-                    </div>
-                    <div class="label-container">
-                        <h2>TEST AND TAG</h2>
-                    </div>
-                </div>
-
-
-            </div>
-
+        </div>
+        <!--Domestic Section-->
+        <div class="section-container" id="domestic">
+        </div>
+        <!--Commercial Section-->
+        <div class="section-container" id="commercial">
+        </div>
+        <!--About Us Section-->
+        <div class="section-container" id="about">
+        </div>
+        <!--Contact Us Section-->
+        <div class="section-container" id="contact">
         </div>
     </main>
+    <footer>2023 Copyright &copy; Wires and More</footer>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.12.0/cdn/shoelace-autoloader.js"></script>
+    <script src="js/main.js" async defer></script>
+</body>
 
-    <footer>
-        <h5>Copyright 2023 &copy; Wires and More. All Rights Reserved</h5>
-    </footer>
-</body></html>
+</html>
