change complete file structure

--- a/index.html
+++ b/index.html
@@ -2,106 +2,44 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wires and More</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Khand&family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.12.0/cdn/themes/light.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+</head>
 
 <body>
-    <!--Header Containment -->
-    <header class="site-header-container">
-        <!--Header-->
-        <div class="site-header-content">
-            <!--Header Content Area-->
-            <div class="site-header">
-                <!--Logo Containment Area-->
-                <div class="logo-container">
-                    <!--Header Image Link-->
-                    <a href="#home">
-                        <!--Header Image-->
-                        <img src="images/logo_small.jpg" alt="">
-                    </a>
-                </div>
-                <div class="nav-container">
-                    <ul>
-                        <li><a href="#domestic">Residential</a></li>
-                        <li><a href="#commercial">Commercial</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+
+    <header>
+
     </header>
     <main>
-        <div class="section-container" id="home">
-            <div class="image-container">
-                <img src="images/kitchen.jpg" alt="">
-            </div>
-            <div class="spacer">
-                <h3 class="welcome-message">OUR SERVICES</h3>
-            </div>
-            <div class="section-messages-container">
-                <div class="section-message">
-                    <div class="message-1">
-                        <div class="message-divider">
-                            <sl-icon name="lightning"></sl-icon>
-                        </div>
-                        <div class="message-divider">
-                            Electrical
-                        </div>
-                    </div>
-                    <div class="message-2">
-                        <div class="message-divider">
-                            <sl-icon name="bar-chart"></sl-icon>
-                        </div>
-                        <div class="message-divider">
-                            Data
-                        </div>
-                    </div>
-                    <div class="message-3">
-                        <div class="message-divider">
-                            <sl-icon name="tools"></sl-icon>
-                        </div>
-                        <div class="message-divider">
-                            Service Calls
-                        </div>
-                        <div class="message-divider"></div>
-                    </div>
-                    <div class="message-4">
-                        <div class="message-divider">
-                            <sl-icon name="currency-dollar"></sl-icon>
-                        </div>
-                        <div class="message-divider">
-                            Free Quotes
-                        </div>
-                        <div class="message-divider"></div>
-                    </div>
-                </div>
-            </div>
+        <div class="mobile-hero-container">
+            <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
+            <img class="side-image" src="images/hero.jpg" alt="">
         </div>
-        <!--Domestic Section-->
-        <div class="section-container" id="domestic">
+        <div class="nav">
+            <ul>
+                <li>
+                    <a class="middle-button" href="#">DOMESTIC</a>
+                    <a class="middle-button" href="#">COMMERCIAL</a>
+                    <a class="middle-button" href="#">TEST & TAG</a>
+                    <a class="middle-button" href="#">ABOUT US</a>
+                    <a class="middle-button" href="#">CONTACT US</a>
+                </li>
+            </ul>
         </div>
-        <!--Commercial Section-->
-        <div class="section-container" id="commercial">
-        </div>
-        <!--About Us Section-->
-        <div class="section-container" id="about">
-        </div>
-        <!--Contact Us Section-->
-        <div class="section-container" id="contact">
+        <div class="desktop-hero-container">
+            <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
+            <img class="side-image" src="images/hero.jpg" alt="">
         </div>
     </main>
-    <footer>2023 Copyright &copy; Wires and More</footer>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.12.0/cdn/shoelace-autoloader.js"></script>
-    <script src="js/main.js" async defer></script>
+    <footer>
+        &copy;2023 Wires and More
+    </footer>
 </body>
 
 </html>
+<!--- Photo by Max Vakhtbovycn: https://www.pexels.com/photo/big-hall-in-minimalistic-style-in-modern-apartment-building-6238610/ -->
+<!-- Photo by Pixabay: https://www.pexels.com/photo/close-up-of-hand-holding-text-over-black-background-326576/ -->
