remove excess character

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </main>
     <footer>
-        Cop[yright &copy;2023 Wires and More
+        Copyright &copy;2023 Wires and More
     </footer>
 </body>
 
