change nav width

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </main>
     <footer>
-        Copyright &copy;2023 Wires and More
+        Copyright 2023 &copy; Wires and More
     </footer>
 </body>
 
