remove border from top button, and add script file

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="nav">
             <ul>
                 <li>
-                    <a class="middle-button" href="#">DOMESTIC</a>
-                    <a class="middle-button" href="#">COMMERCIAL</a>
-                    <a class="middle-button" href="#">TEST & TAG</a>
-                    <a class="middle-button" href="#">ABOUT US</a>
-                    <a class="middle-button" href="#">CONTACT US</a>
+                    <a href="#">DOMESTIC</a>
+                    <a class="border-button"  href="#">COMMERCIAL</a>
+                    <a class="border-button"  href="#">TEST & TAG</a>
+                    <a class="border-button"  href="#">ABOUT US</a>
+                    <a class="border-button"  href="#">CONTACT US</a>
                 </li>
             </ul>
         </div>
@@ -40,6 +40,7 @@
     <footer>
         Copyright 2023 &copy; Wires and More
     </footer>
+    <script src="script/main.js"></script>
 </body>
 
 </html>
