--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="nav">
             <ul>
                 <li>
-                    <a href="#">DOMESTIC</a>
-                    <a class="border-button"  href="#">COMMERCIAL</a>
-                    <a class="border-button"  href="#">TEST & TAG</a>
-                    <a class="border-button"  href="#">ABOUT US</a>
-                    <a class="border-button"  href="#">CONTACT US</a>
+                    <a href="domestic" id="domestic">DOMESTIC</a>
+                    <a class="border-button" id="commercial"  href="#">COMMERCIAL</a>
+                    <a class="border-button" id="testandtag"  href="#">TEST & TAG</a>
+                    <a class="border-button" id="about"  href="#">ABOUT US</a>
+                    <a class="border-button" id="contact"  href="#">CONTACT US</a>
                 </li>
             </ul>
         </div>
