change aref for testing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="nav">
             <ul>
                 <li>
-                    <a href="domestic" id="domestic">DOMESTIC</a>
+                    <a href="#" id="domestic">DOMESTIC</a>
                     <a class="border-button" id="commercial"  href="#">COMMERCIAL</a>
                     <a class="border-button" id="testandtag"  href="#">TEST & TAG</a>
                     <a class="border-button" id="about"  href="#">ABOUT US</a>
