change hero image to video

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     </header>
     <main>
         <div class="mobile-hero-container">
-            <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
-            <img class="side-image" src="images/hero.jpg" alt="">
+            <video src="video/Video.mp4"></video>
         </div>
         <div class="nav">
             <ul>
