correct placemnet of video

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </header>
     <main>
         <div class="mobile-hero-container">
-            <video src="video/Video.mp4"></video>
+            <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
+            <img class="side-image" src="images/hero.jpg" alt="">
         </div>
         <div class="nav">
             <ul>
@@ -33,7 +34,7 @@
         </div>
         <div class="desktop-hero-container">
             <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
-            <img class="side-image" src="images/hero.jpg" alt="">
+            <video src="video/Video.mp4"></video>
         </div>
     </main>
     <footer>
