add autoplay to video

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="desktop-hero-container">
             <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
-            <video src="video/Video.mp4"></video>
+            <video src="video/Video.mp4" autoplay></video>
         </div>
     </main>
     <footer>
