change video structure

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         </div>
         <div class="desktop-hero-container">
             <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
-            <video src="video/Video.mp4" autoplay></video>
+            <video autoplay>
+                <source src="video/Video.mp4" type="video/mp4" />
+            </video>
         </div>
     </main>
     <footer>
