--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="desktop-hero-container">
             <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
-            <video autoplay>
+            <video width="1920" height="1080" autoplay>
                 <source src="video/Video.mp4" type="video/mp4" />
             </video>
         </div>
