--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         </div>
         <div class="desktop-hero-container">
             <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
-            <video width="1920" height="1080" autoplay>
-                <source src="video/Video.mp4" type="video/mp4" />
+            <video width="1920" height="1080" autoplay controls>
+                <source src="/video/video.mp4" type="video/mp4">
+                <source src="/video/video.ogg" type="video/ogg">
+                Your browser does not support the video tag.
             </video>
         </div>
     </main>
