--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="desktop-hero-container">
             <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
             <video autoplay>
-                <source src="video.mp4" type="video/mp4" />
+                <source src="video/video.mp4" type="video/mp4" />
             </video>
         </div>
     </main>
