--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             </ul>
         </div>
         <div class="desktop-hero-container">
-            <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
-            <video autoplay>
-                <source src="video/video.mp4" type="video/mp4" />
+            <video autoplay muted playsinline>
+                <source src="/video/video.mp4" type="video/mp4" />
             </video>
         </div>
     </main>
