change css for vide - testing - not showing up

--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
             <ul>
                 <li>
                     <a class="top-button" href="#" id="domestic">DOMESTIC</a>
-                    <a class="border-button" id="commercial"  href="#">COMMERCIAL</a>
-                    <a class="border-button" id="testandtag"  href="#">TEST & TAG</a>
-                    <a class="border-button" id="about"  href="#">ABOUT US</a>
-                    <a class="border-button" id="contact"  href="#">CONTACT US</a>
+                    <a class="border-button" id="commercial" href="#">COMMERCIAL</a>
+                    <a class="border-button" id="testandtag" href="#">TEST & TAG</a>
+                    <a class="border-button" id="about" href="#">ABOUT US</a>
+                    <a class="border-button" id="contact" href="#">CONTACT US</a>
                 </li>
             </ul>
         </div>
         <div class="desktop-hero-container">
-            <video autoplay muted playsinline>
-                <source src="/video/video.mp4" type="video/mp4" />
+            <video height="500" width="500" class="demoVideo" controls>
+                <source src="video/video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
             </video>
         </div>
     </main>
