--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
             </ul>
         </div>
         <div class="desktop-hero-container">
-            <video height="500" width="500" class="demoVideo" controls>
+            <video class="video" muted autoplay>
                 <source src="video/video.mp4" type="video/mp4">
+                <source src="video/video.ogg" type="video/ogg">
                 Your browser does not support the video tag.
             </video>
+
+
+
         </div>
     </main>
     <footer>
