adjust footer left margin

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </main>
     <footer>
-        Copyright 2023 &copy; Wires and More
+        <p>Copyright 2023 &copy; Wires and More</p>
     </footer>
     <script src="script/main.js"></script>
 </body>
