--- a/index.html
+++ b/index.html
@@ -33,14 +33,11 @@
             </ul>
         </div>
         <div class="desktop-hero-container">
-            <video class="video" muted autoplay>
-                <source src="video/video.mp4" type="video/mp4">
-                <source src="video/video.ogg" type="video/ogg">
-                Your browser does not support the video tag.
-            </video>
-
-
-
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/kSBNk3JADCM?si=ohNKFVfyxEbd24km?autoplay=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
         </div>
     </main>
     <footer>
