revert back to video

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
             </ul>
         </div>
         <div class="desktop-hero-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/kSBNk3JADCM?si=ohNKFVfyxEbd24km?autoplay=1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-            </iframe>
+            <video class="video" id="video" muted autoplay>
+                <source src="video/video.mp4" type="video/mp4">
+                <source src="video/video.ogg" type="video/ogg">
+                Your browser does not support the video tag.
+            </video>
+            <audio src="audio/audio.mp3" autoplay></audio>
         </div>
     </main>
     <footer>
