change image to video

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <div class="mobile-hero-container">
             <!-- Photo by Mark: https://www.pexels.com/photo/white-wooden-cupboards-2724749/ -->
-            <img class="side-image" src="images/hero.jpg" alt="">
+            <img class="side-image" src="images/wam.jpg" alt="">
         </div>
         <div class="nav">
             <ul>
@@ -33,7 +33,7 @@
             </ul>
         </div>
         <div class="desktop-hero-container">
-            <video class="video" id="video" muted autoplay>
+            <video class="video" id="video" autoplay muted>
                 <source src="video/video.mp4" type="video/mp4">
                 <source src="video/video.ogg" type="video/ogg">
                 Your browser does not support the video tag.
